--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^18.11.5",
     "@types/react": "^18.0.23",
     "@types/react-dom": "^18.0.7",
+    "@types/three": "^0.171.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "serve": "^14.2.0",
+    "three": "^0.171.0",
     "typescript": "^4.8.4"
   }
 }
