--- a/package.json
+++ b/package.json
@@ -6,15 +6,14 @@
     "start": "serve out"
   },
   "dependencies": {
-    "@types/node": "^22.10.2",
-    "@types/react": "^19.0.2",
-    "@types/react-dom": "^19.0.2",
-    "@types/three": "^0.171.0",
+    "@react-three/fiber": "^8.17.10",
     "next": "latest",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "serve": "^14.2.0",
-    "three": "^0.171.0",
-    "typescript": "^5.7.2"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "three": "latest",
+    "typescript": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.2"
   }
 }
