--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
     "start": "serve out"
   },
   "dependencies": {
+    "@react-three/drei": "^9.120.4",
     "@react-three/fiber": "^8.17.10",
+    "@types/three": "^0.171.0",
     "next": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "latest",
+    "three": "^0.171.0",
     "typescript": "latest"
   },
   "devDependencies": {
