--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
-    "next": "14.1.0",
+    "next": "^14.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "^0.161.0",
