--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "next": "^14.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "simple-parallax-js": "^6.0.1",
     "three": "^0.161.0",
     "typescript": "latest"
   },
