--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
     "start": "serve out"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.5",
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "next": "^14.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "simple-parallax-js": "^6.0.1",
     "three": "^0.161.0",
     "typescript": "latest"
   },
