--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "^14.2.22",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-scroll-parallax": "^3.4.5",
     "three": "^0.161.0",
     "typescript": "latest"
   },
