--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "@react-three/drei": "^9.99.0",
     "@react-three/fiber": "^8.15.16",
     "next": "^14.2.22",
-    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scroll-parallax": "^3.4.5",
+    "react-syntax-highlighter": "^15.6.1",
     "three": "^0.161.0",
     "typescript": "latest"
   },
